[package]
name = "starknet-rust-signers"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Starknet signer implementations
"""
keywords.workspace = true

[dependencies]
starknet-rust-core = { workspace = true, features = ["std"] }
starknet-rust-crypto = { workspace = true, features = ["std"] }
starknet-rust-curve = { workspace = true }
async-trait.workspace = true
auto_impl.workspace = true
thiserror.workspace = true
crypto-bigint.workspace = true
rand = { workspace = true, features = ["std_rng"] }
coins-bip32 = { workspace = true, optional = true }
coins-ledger = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
zeroize.workspace = true

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
eth-keystore.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
speculos-client.workspace = true
starknet-rust-signers = { path = ".", features = ["ledger"] }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
default = ["std"]
std = ["starknet-rust-core/std", "starknet-rust-crypto/std", "rand/std"]

ledger = ["coins-bip32", "coins-ledger", "semver"]

[lints]
workspace = true
