[package]
name = "starknet-rust-tokio-tungstenite"
version = "0.4.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Starknet JSON-RPC WebSocket client implementation with tokio-tungstenite
"""
keywords.workspace = true

[dependencies]
starknet-rust-core.workspace = true
starknet-rust-providers.workspace = true
futures-util.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tungstenite.workspace = true

[dev-dependencies]
starknet-rust-providers.workspace = true

[lints]
workspace = true
