[package]
name = "starknet-rust-tokio-tungstenite"
version = "0.4.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Starknet JSON-RPC WebSocket client implementation with tokio-tungstenite
"""
keywords.workspace = true

[dependencies]
starknet-rust-core = { workspace = true, features = ["std"] }
starknet-rust-providers = { workspace = true, features = ["std"] }
futures-util.workspace = true
log.workspace = true
rand = { workspace = true, features = ["std_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
tokio-util.workspace = true
tungstenite = { workspace = true, features = ["url"] }

[dev-dependencies]
starknet-rust-providers = { workspace = true, features = ["no_unknown_fields"] }

[lints]
workspace = true
