[package]
name = "starknet-rust-wasm"
version = "0.1.0"
authors = ["Software Mansion <contact@swmansion.com>", "Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition.workspace = true
readme = "README.md"
repository = "https://github.com/software-mansion/starknet-rust"
description = """
Example usage of starknet-rust from WASM
"""
keywords = ["ethereum", "starknet", "web3"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
starknet-rust-crypto = { version = "0.9.0", path = "../../starknet-rust-crypto" }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.84"
