[package]
name = "starknet-rust-wasm"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Example usage of starknet-rust from WASM
"""
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
starknet-rust-crypto.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen.workspace = true
