[package]
name = "speculos-client"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
hex = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["time"] }
