[package]
name = "test-common"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
starknet-rust-providers = { workspace = true, features = ["tls"] }
tokio = { workspace = true, features = ["sync"] }
url.workspace = true

[lints]
workspace = true
