[package]
name = "test-common"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
starknet-rust-accounts = { workspace = true, features = ["std"] }
starknet-rust-core = { workspace = true, features = ["std"] }
starknet-rust-providers.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
url.workspace = true

[lints]
workspace = true
