[package]
name = "starknet-rust-cxx"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
cxx = "1.0"

# Using path dependency here to make development easier. However, you probably want to fetch the
# crate from GitHub instead (because the `starknet-rust-core` crate isn't being published to crates.io
# regularly like `starknet-rust-crypto` at the moment), which means changing the next line to:
#
# starknet-rust-core = { git = "https://github.com/software-mansion/starknet-rust" }
starknet-rust-core = { path = "../../../starknet-rust-core" }

# Same as above.
# 
# This entry is needed to enable the `signature-display` feature of `starknet-rust-crypto`.
starknet-rust-crypto = { path = "../../../starknet-rust-crypto", default-features = false, features = ["signature-display"] }

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

