[package]
name = "starknet-rust-cxx"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
cxx.workspace = true

# Using path dependency here to make development easier. However, you probably want to fetch the
# crate from GitHub instead (because the `starknet-rust-core` crate isn't being published to crates.io
# regularly like `starknet-rust-crypto` at the moment), which means changing the next line to:
#
# starknet-rust-core = { git = "https://github.com/software-mansion/starknet-rust" }
starknet-rust-core.workspace = true

# Same as above.
# 
# This entry is needed to enable the `signature-display` feature of `starknet-rust-crypto`.
starknet-rust-crypto = { workspace = true, features = ["signature-display"] }

[build-dependencies]
cxx-build.workspace = true

[lib]
crate-type = ["staticlib"]

