[package]
name = "starknet-rust-cxx"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
cxx.workspace = true

# Using workspace dependency here to make development easier.
starknet-rust-core.workspace = true

# Same as above.
# 
# This entry is needed to enable the `signature-display` feature of `starknet-rust-crypto`.
starknet-rust-crypto = { workspace = true, features = ["signature-display"] }

[build-dependencies]
cxx-build.workspace = true

[lib]
crate-type = ["staticlib"]

